force-app/main/default/objects/Beacon_Call_Notes__c/Beacon_Call_Notes__c.object-meta.xml
<CustomObject>
    <description>Custom object is used to submit call notes and receive collection notes from Beacon.</description>
    <label>Call Notes</label>
    <nameField>
        <displayFormat>BC-{000000}</displayFormat>
        <label>Notes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>