force-app/main/default/objects/Beacon_Call_Notes__c/fields/Account_Class__c.field-meta.xml
<CustomField>
    <fullName>Account_Class__c</fullName>
    <label>Account Class</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Base</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Cross Sell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>