force-app/main/default/objects/Beacon_Call_Notes__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>User.User_ID_18__c</field>
            <operation>notEqual</operation>
            <value>005j000000EbTG4AAN</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>