force-app/main/default/objects/Beacon_Call_Notes__c/fields/Assigned_to_Sales_Area__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to_Sales_Area__c</fullName>
    <formula>text(Assigned_To__r.Sales_Area__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned to Sales Area</label>
    <type>Text</type>
</CustomField>