force-app/main/default/objects/Beacon_Call_Notes__c/fields/Beacon_Call_note_date__c.field-meta.xml
<CustomField>
    <fullName>Beacon_Call_note_date__c</fullName>
    <defaultValue>today()</defaultValue>
    <description>Date of call note</description>
    <label>Call Note Date</label>
    <type>Date</type>
</CustomField>