force-app/main/default/objects/Beacon_Call_Notes__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <description>Sales order Branch owner</description>
    <inlineHelpText>Sales order Branch owner</inlineHelpText>
    <label>Branch</label>
    <length>10</length>
    <type>Text</type>
</CustomField>