force-app/main/default/objects/Beacon_Call_Notes__c/fields/Call_Note__c.field-meta.xml
<CustomField>
    <fullName>Call_Note__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp;    Id  ,   Description__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Note</label>
    <type>Text</type>
</CustomField>