force-app/main/default/objects/Beacon_Call_Notes__c/fields/Call_Note_Account__c.field-meta.xml
<CustomField>
    <fullName>Call_Note_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Call Note Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Call Notes</relationshipLabel>
    <relationshipName>Beacon_Call_Notes1</relationshipName>
    <type>Lookup</type>
</CustomField>