force-app/main/default/objects/Beacon_Call_Notes__c/fields/Call_Note_Name_Hyperlink__c.field-meta.xml
<CustomField>
    <fullName>Call_Note_Name_Hyperlink__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; CASESAFEID(Id), Name, &quot;_self&quot;)</formula>
    <label>Call Note Name Hyperlink</label>
    <type>Text</type>
</CustomField>