force-app/main/default/objects/Beacon_Call_Notes__c/fields/Call_Note_Sort__c.field-meta.xml
<CustomField>
    <fullName>Call_Note_Sort__c</fullName>
    <formula>IF(RecordType.DeveloperName =&quot;Call_Note&quot;,&quot;B_&quot;,&quot;A_&quot;)&amp;RecordType.DeveloperName &amp;&quot;_&quot;&amp;TEXT( MONTH( datevalue(LastModifiedDate) )  ) &amp; &quot;/&quot; &amp; TEXT( DAY( datevalue(LastModifiedDate) ) )  &amp; &quot;/&quot; &amp; TEXT( YEAR( datevalue(LastModifiedDate) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Note Sort</label>
    <type>Text</type>
</CustomField>