force-app/main/default/objects/Beacon_Call_Notes__c/fields/Call_Notes_ID_18__c.field-meta.xml
<CustomField>
    <fullName>Call_Notes_ID_18__c</fullName>
    <formula>casesafeid(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Notes ID (18)</label>
    <type>Text</type>
</CustomField>