force-app/main/default/objects/Beacon_Call_Notes__c/fields/Call_Notes_ID__c.field-meta.xml
<CustomField>
    <fullName>Call_Notes_ID__c</fullName>
    <externalId>true</externalId>
    <label>Call Notes ID</label>
    <length>16</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>