force-app/main/default/objects/Beacon_Call_Notes__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <label>Campaign</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>