force-app/main/default/objects/Beacon_Call_Notes__c/fields/Collection_Account__c.field-meta.xml
<CustomField>
    <fullName>Collection_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collection Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Collection Notes</relationshipLabel>
    <relationshipName>Beacon_Call_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>