force-app/main/default/objects/Beacon_Call_Notes__c/fields/Collection_ID__c.field-meta.xml
<CustomField>
    <fullName>Collection_ID__c</fullName>
    <label>Collection ID</label>
    <length>16</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>