force-app/main/default/objects/Beacon_Call_Notes__c/fields/Collection_Note_Filter__c.field-meta.xml
<CustomField>
    <fullName>Collection_Note_Filter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created this field to avoid displaying Zero Current Balance amount fields on Account related list - INC1640266</description>
    <label>Collection Note Filter</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Collection Notes (Account)</relationshipLabel>
    <relationshipName>Call_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>