force-app/main/default/objects/Beacon_Call_Notes__c/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <inlineHelpText>The Colors in this field mean:
1. Green–Call to review normal operations.
2. Yellow–Change is required (New name, new address, etc.).
3. Orange–Problem has been resolved.
4. Blue–Problem on the account that is putting the business in jeopardy. Note will be distributed to DL including SR MGMT.
5. Red–We have lost business on this account. The call should explain how/why this occurred. Note will be distributed to DL including SR MGMT.
6. Black–Location or customer has closed.</inlineHelpText>
    <label>Color</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Green - Status Quo</fullName>
                <color>#33CC00</color>
                <label>Green - Status Quo</label>
            </value>
            <value>
                <fullName>Yellow - Change</fullName>
                <color>#F3D904</color>
                <label>Yellow - Change</label>
            </value>
            <value>
                <fullName>Orange - Resolution</fullName>
                <color>#FF6600</color>
                <label>Orange - Resolution (Change or Problem has been resolved)</label>
            </value>
            <value>
                <fullName>Blue - Problem</fullName>
                <color>#0B24BE</color>
                <label>Blue - Problem (Communicated to Sr MGMT DL)</label>
            </value>
            <value>
                <fullName>Red - Lost Business</fullName>
                <color>#FF0000</color>
                <label>Red - Lost Business (Communicated to SR MGMT DL)</label>
            </value>
            <value>
                <fullName>Black - Closed Acct</fullName>
                <color>#000000</color>
                <label>Black - Closed Acct</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>