force-app/main/default/objects/Beacon_Call_Notes__c/fields/Consolidated_Bill_To__c.field-meta.xml
<CustomField>
    <fullName>Consolidated_Bill_To__c</fullName>
    <label>Consolidated Bill To</label>
    <length>20</length>
    <type>Text</type>
</CustomField>