force-app/main/default/objects/Beacon_Call_Notes__c/fields/Consolidated_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Consolidated_Invoice__c</fullName>
    <label>Consolidated Invoice</label>
    <length>22</length>
    <type>Text</type>
</CustomField>