force-app/main/default/objects/Beacon_Call_Notes__c/fields/Credit_Request__c.field-meta.xml
<CustomField>
    <fullName>Credit_Request__c</fullName>
    <formula>Hyperlink(
&quot;https://winwebtest.cleanharbors.com/Workflow/CreditRequest_wf.aspx?iid=&quot;&amp;  Call_Notes_ID__c , &quot;Credit Request&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Request</label>
    <type>Text</type>
</CustomField>