force-app/main/default/objects/Beacon_Call_Notes__c/fields/Days_Since_Create_Date__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Create_Date__c</fullName>
    <formula>TODAY() -  DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Create Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>