force-app/main/default/objects/Beacon_Call_Notes__c/fields/Days_to_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Invoice__c</fullName>
    <label>Days to Invoice</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>