force-app/main/default/objects/Beacon_Call_Notes__c/fields/Insert_by_User_lookup__c.field-meta.xml
<CustomField>
    <fullName>Insert_by_User_lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the user table who inserted the call note record</description>
    <label>Insert by User lookup</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Beacon_Call_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>