force-app/main/default/objects/Beacon_Call_Notes__c/fields/Issue__c.field-meta.xml
<CustomField>
    <fullName>Issue__c</fullName>
    <label>Issue</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Color__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>CHES Price Increase Action</fullName>
            </value>
            <value>
                <fullName>Competitor Pricing Action</fullName>
            </value>
            <value>
                <fullName>Field Performance</fullName>
            </value>
            <value>
                <fullName>Invoice/Manifest/Document Issue</fullName>
            </value>
            <value>
                <fullName>Manifest/Paperwork Error</fullName>
            </value>
            <value>
                <fullName>Missing/Late Manifest Return</fullName>
            </value>
            <value>
                <fullName>Missing/Lost Drum</fullName>
            </value>
            <value>
                <fullName>Onsite Health &amp; Safety Violation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Problem Invoice</fullName>
            </value>
            <value>
                <fullName>Scheduling/Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>