force-app/main/default/objects/Beacon_Call_Notes__c/fields/Job_Folder__c.field-meta.xml
<CustomField>
    <fullName>Job_Folder__c</fullName>
    <formula>Hyperlink(
&quot;https://winwebtest.cleanharbors.com/jobfolder/queryindexresults.aspx?sls_order=&quot;&amp; Sales_Order_Number__c, &quot;View Job Folder&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Folder</label>
    <type>Text</type>
</CustomField>