force-app/main/default/objects/Beacon_Call_Notes__c/fields/Jointly_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Jointly_Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Jointly Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Notes1</relationshipName>
    <type>Lookup</type>
</CustomField>