force-app/main/default/objects/Beacon_Call_Notes__c/fields/Keyword__c.field-meta.xml
<CustomField>
    <fullName>Keyword__c</fullName>
    <label>Keyword</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1st Letter</fullName>
            </value>
            <value>
                <fullName>2nd Letter</fullName>
            </value>
            <value>
                <fullName>3rd Letter</fullName>
            </value>
            <value>
                <fullName>Audit</fullName>
            </value>
            <value>
                <fullName>Bankruptcy</fullName>
            </value>
            <value>
                <fullName>Bounced Check</fullName>
            </value>
            <value>
                <fullName>Cash Volume Discount</fullName>
            </value>
            <value>
                <fullName>CESQG Participant</fullName>
            </value>
            <value>
                <fullName>CHES cust to whom we owe $</fullName>
            </value>
            <value>
                <fullName>COD Payment</fullName>
            </value>
            <value>
                <fullName>Collection</fullName>
            </value>
            <value>
                <fullName>Contra Account</fullName>
            </value>
            <value>
                <fullName>Credit/Rebill</fullName>
            </value>
            <value>
                <fullName>Cust. Needs Certs.</fullName>
            </value>
            <value>
                <fullName>Demand Letter Sent</fullName>
            </value>
            <value>
                <fullName>Dispute-PO</fullName>
            </value>
            <value>
                <fullName>Duplicate Payment</fullName>
            </value>
            <value>
                <fullName>Exceeds PO</fullName>
            </value>
            <value>
                <fullName>GE Discount ShortPay</fullName>
            </value>
            <value>
                <fullName>Historical CHES</fullName>
            </value>
            <value>
                <fullName>Historical CSD</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Insurance Claim</fullName>
            </value>
            <value>
                <fullName>Intercont Leasing Fee</fullName>
            </value>
            <value>
                <fullName>Invoice Required</fullName>
            </value>
            <value>
                <fullName>Late Invoice</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Murphy&apos;s Oil</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>No PO Obtained</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>