force-app/main/default/objects/Beacon_Call_Notes__c/fields/Main_Contact__c.field-meta.xml
<CustomField>
    <fullName>Main_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Main Contact</label>
    <referenceTo>Beacon_Contact__c</referenceTo>
    <relationshipName>Account_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>