force-app/main/default/objects/Beacon_Call_Notes__c/fields/Main_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Main_Contact_Name__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; &amp; Main_Contact__r.Contact__r.Id,Main_Contact__r.Contact__r.FirstName &amp; &apos; &apos; &amp; Main_Contact__r.Contact__r.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Main Contact Name</label>
    <type>Text</type>
</CustomField>