force-app/main/default/objects/Beacon_Call_Notes__c/fields/Next_Action__c.field-meta.xml
<CustomField>
    <fullName>Next_Action__c</fullName>
    <label>Next Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Follow-up</fullName>
            </value>
            <value>
                <fullName>Quote</fullName>
            </value>
            <value>
                <fullName>Visit</fullName>
            </value>
            <value>
                <fullName>Call Eng.</fullName>
            </value>
            <value>
                <fullName>Call Other Contact</fullName>
            </value>
            <value>
                <fullName>Collection</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Contact CH Employee</fullName>
            </value>
            <value>
                <fullName>Re-sent Invoice</fullName>
            </value>
            <value>
                <fullName>Sent Invoice</fullName>
            </value>
            <value>
                <fullName>Verify Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>