force-app/main/default/objects/Beacon_Call_Notes__c/fields/Print_Date__c.field-meta.xml
<CustomField>
    <fullName>Print_Date__c</fullName>
    <label>Print Date</label>
    <type>DateTime</type>
</CustomField>