force-app/main/default/objects/Beacon_Call_Notes__c/fields/Resolution_1__c.field-meta.xml
<CustomField>
    <fullName>Resolution_1__c</fullName>
    <label>Resolution 1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fall Out</fullName>
            </value>
            <value>
                <fullName>Future Interest</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>No Bid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>