force-app/main/default/objects/Beacon_Call_Notes__c/fields/Resolution_2__c.field-meta.xml
<CustomField>
    <fullName>Resolution_2__c</fullName>
    <label>Resolution 2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Competitor - Price</fullName>
            </value>
            <value>
                <fullName>Due to Capacity</fullName>
            </value>
            <value>
                <fullName>Fallout</fullName>
            </value>
            <value>
                <fullName>Future Interest</fullName>
            </value>
            <value>
                <fullName>Job CANCELED</fullName>
            </value>
            <value>
                <fullName>Location</fullName>
            </value>
            <value>
                <fullName>No Activity</fullName>
            </value>
            <value>
                <fullName>Restrictions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>