force-app/main/default/objects/Beacon_Call_Notes__c/fields/Resolution_3__c.field-meta.xml
<CustomField>
    <fullName>Resolution_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resolution 3</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Competitor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>Account_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>