force-app/main/default/objects/Beacon_Call_Notes__c/fields/Sales_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Number__c</fullName>
    <label>Sales Order Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>