force-app/main/default/objects/Beacon_Call_Notes__c/fields/Services_Discussed__c.field-meta.xml
<CustomField>
    <fullName>Services_Discussed__c</fullName>
    <label>Services Discussed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Airborne Imaging Services</fullName>
            </value>
            <value>
                <fullName>Allied Products</fullName>
            </value>
            <value>
                <fullName>All Services</fullName>
            </value>
            <value>
                <fullName>Base Oil Sales</fullName>
            </value>
            <value>
                <fullName>Blended Oil Sales</fullName>
            </value>
            <value>
                <fullName>Bundle Pulling Services</fullName>
            </value>
            <value>
                <fullName>Catalyst Services</fullName>
            </value>
            <value>
                <fullName>Chemical Cleaning</fullName>
            </value>
            <value>
                <fullName>CleanPack Services</fullName>
            </value>
            <value>
                <fullName>Container Services</fullName>
            </value>
            <value>
                <fullName>Daylighting</fullName>
            </value>
            <value>
                <fullName>Directional Boring Services</fullName>
            </value>
            <value>
                <fullName>Direct Ship</fullName>
            </value>
            <value>
                <fullName>Downhole Production Services</fullName>
            </value>
            <value>
                <fullName>Drill Camps and Catering</fullName>
            </value>
            <value>
                <fullName>Drill Support Services</fullName>
            </value>
            <value>
                <fullName>Emergency Response Services</fullName>
            </value>
            <value>
                <fullName>Exploration Services</fullName>
            </value>
            <value>
                <fullName>Field Services</fullName>
            </value>
            <value>
                <fullName>Filtration and Treatment Services</fullName>
            </value>
            <value>
                <fullName>General - All Services</fullName>
            </value>
            <value>
                <fullName>Health and Safety Services</fullName>
            </value>
            <value>
                <fullName>High Hazardous Services</fullName>
            </value>
            <value>
                <fullName>High Pressure Services</fullName>
            </value>
            <value>
                <fullName>Household Hazardous Waste Services</fullName>
            </value>
            <value>
                <fullName>Hydroexcavation</fullName>
            </value>
            <value>
                <fullName>Industrial Onsite Services</fullName>
            </value>
            <value>
                <fullName>Industrial Services</fullName>
            </value>
            <value>
                <fullName>Insite Field Services</fullName>
            </value>
            <value>
                <fullName>Insite Technical Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>