force-app/main/default/objects/Beacon_Call_Notes__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Call A/P</fullName>
            </value>
            <value>
                <fullName>Call Eng.</fullName>
            </value>
            <value>
                <fullName>Call Other Contact</fullName>
            </value>
            <value>
                <fullName>Confirm Inv. Recpt</fullName>
            </value>
            <value>
                <fullName>Contact CH Employee</fullName>
            </value>
            <value>
                <fullName>Left Message</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Re-sent Debit Memo</fullName>
            </value>
            <value>
                <fullName>Re-sent Invoice</fullName>
            </value>
            <value>
                <fullName>Sent Debit Memo</fullName>
            </value>
            <value>
                <fullName>Sent E-Mail</fullName>
            </value>
            <value>
                <fullName>Sent Fax</fullName>
            </value>
            <value>
                <fullName>Sent Invoice</fullName>
            </value>
            <value>
                <fullName>Verified Payment</fullName>
            </value>
            <value>
                <fullName>Verify w/ Agency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>