force-app/main/default/objects/Beacon_Call_Notes__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>List of Beacon Types</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CHOICE Support - OPEN</fullName>
            </value>
            <value>
                <fullName>Initial Contact</fullName>
            </value>
            <value>
                <fullName>Note</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Profile</fullName>
            </value>
            <value>
                <fullName>Review</fullName>
            </value>
            <value>
                <fullName>Review - Pricing</fullName>
            </value>
            <value>
                <fullName>RSOM Proactive Call</fullName>
            </value>
            <value>
                <fullName>Telemarketing</fullName>
            </value>
            <value>
                <fullName>Update</fullName>
                <default>true</default>
                <label>Update</label>
            </value>
            <value>
                <fullName>Visit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>