force-app/main/default/objects/Beacon_Call_Notes__c/fields/Work_Note__c.field-meta.xml
<CustomField>
    <fullName>Work_Note__c</fullName>
    <label>Work Note</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>