force-app/main/default/objects/Beacon_Call_Notes__c/fields/Work_Note_Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Work_Note_Last_Modified_Date__c</fullName>
    <label>Work Note Last Modified Date</label>
    <summarizedField>Work_Notes__c.LastModifiedDate</summarizedField>
    <summaryForeignKey>Work_Notes__c.Beacon_Call_Note__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>