force-app/main/default/objects/Beacon_Call_Notes__c/recordTypes/Call_Note.recordType-meta.xml
<RecordType>
    <fullName>Call_Note</fullName>
    <active>true</active>
    <description>Record type contains all data in order to submit a call note to Beacon</description>
    <label>Call Note</label>
</RecordType>