force-app/main/default/objects/Beacon_Call_Notes__c/recordTypes/Collection_Note.recordType-meta.xml
<RecordType>
    <fullName>Collection_Note</fullName>
    <active>true</active>
    <description>Record type contains all data from collections flow in from Beacon</description>
    <label>Collection Note</label>
</RecordType>